# simple_xframework

./: CMakeLists.txt  README.md  teste  teste.cpp
System/: Debug.h  EventHandlers.h  Form.h  Object.h  System.h  Types.h
src/: Button.cpp  Form.cpp  Label.cpp
src/include/: Button.h  Component.h  Debug.h  EventHandlers.h  Form.h  Label.h  Object.h  System.h  Types.h
src/include/theme/: KDETheme.h  Theme.h  ThemeManager.h
src/include/utils/: Utils.h
src/theme/: ThemeManager.cpp
